--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -518,7 +518,6 @@ tx_ultimate_touch:
             case 3: id(long_press_3).publish_state(true); break;
             case 4: id(long_press_4).publish_state(true); break;
           }
-          id(vibra).turn_on();
         } else {
           switch(button) {
             case 1: id(button_1).publish_state(true); break;
@@ -617,6 +616,7 @@ script:
             esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
             target_led->get(led_index).set(esphome::Color(id(long_press_color)[0], id(long_press_color)[1], id(long_press_color)[2]));
             target_led->schedule_show();
+            id(vibra).turn_on();
           }
 
 # The lovely ESPHome framework will stop execution of a script, even in parallel mode, if it's called
@@ -852,6 +852,22 @@ script:
           green: !lambda "return id(multi_touch_color)[1]/100.0;"
           blue:  !lambda "return id(multi_touch_color)[2]/100.0;"
           effect: ${multi_touch_effect}
+      - script.execute:
+          id: dim_led_at_button_1
+          led_index: 12
+          is_long_press: false
+      - script.execute:
+          id: dim_led_at_button_2
+          led_index: 10
+          is_long_press: false
+      - script.execute:
+          id: dim_led_at_button_3
+          led_index: 8
+          is_long_press: false
+      - script.execute:
+          id: dim_led_at_button_4
+          led_index: 6
+          is_long_press: false
       - delay: 5s
       - light.turn_off: leds_top
 
