--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -194,7 +194,7 @@ globals:
     restore_value: no
     initial_value: '{ esphome::Color(0, 0, 0), esphome::Color(0, 0, 0), esphome::Color(0, 0, 0), esphome::Color(0, 0, 0) }'
   - id: button_lookup
-    type: byte[4][10]
+    type: int[4][10]
     restore_value: no
     initial_value: '{{{1, 1, 1, 1, 1, 1, 1, 1, 1, 1}, {1, 1, 1, 1, 1, 2, 2, 2, 2, 2}, {1, 1, 1, 2, 2, 2, 3, 3, 3, 3}, {1, 1, 2, 2, 2, 3, 3, 3, 4, 4}}}'
 
