--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -194,7 +194,7 @@ globals:
     restore_value: no
     initial_value: '{ esphome::Color(0, 0, 0), esphome::Color(0, 0, 0), esphome::Color(0, 0, 0), esphome::Color(0, 0, 0) }'
   - id: button_lookup
-    type: int[4][10]
+    type: byte[4][10]
     restore_value: no
     initial_value: '{{{1, 1, 1, 1, 1, 1, 1, 1, 1, 1}, {1, 1, 1, 1, 1, 2, 2, 2, 2, 2}, {1, 1, 1, 2, 2, 2, 3, 3, 3, 3}, {1, 1, 2, 2, 2, 3, 3, 3, 4, 4}}}'
 
@@ -202,12 +202,12 @@ text_sensor:
   - platform: template
     name: "Touch Color"
     id: touch_color_string
-    initial_value: "0000FF"
+    initial_value: '0000FF'
 
   - platform: template
     name: "Long Press Color"
     id: long_press_color_string
-    initial_value: "FF00FF"
+    initial_value: 'FF00FF'
 
 binary_sensor:
   - platform: template
