--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -671,15 +671,15 @@ script:
           then:
             - lambda: |-
                 auto original_color = id(original_led_color)[0];
-              /* TODO consider moving led_index logic into these dim methods
-              especially for both top and bottom leds
-                int bottom_led_index = 1;
-                switch(${button_count}) {
-                  4: bottom_led_index = 14 - 2*button; break;
-                  3: bottom_led_index = 13 - 2*button; break;
-                  2: bottom_led_index = 12 - 2*button; break;
-                }
-                */
+              // TODO consider moving led_index logic into these dim methods
+              //especially for both top and bottom leds
+                //int bottom_led_index = 1;
+                //switch(${button_count}) {
+                  //4: bottom_led_index = 14 - 2*button; break;
+                  //3: bottom_led_index = 13 - 2*button; break;
+                  //2: bottom_led_index = 12 - 2*button; break;
+                //}
+                //
                 auto dim_color = (is_long_press) ? id(long_press_color) : id(touch_color);
                 float factor = iteration * 0.1f;
                 int r = dim_color[0]*(1.0-factor) + original_color.r*factor;
