--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -520,6 +520,8 @@ tx_ultimate_touch:
         //auto led_and_button = get_led_and_button_at_x(touch.x, ${button_count});
         //id(led_on_button_press)->execute(led_and_button[0], led_and_button[1]);
         auto button = id(button_lookup)[${button_count}][touch.x];
+        // TODO consider moving led_index logic into these dim_led_at methods
+        // especially for both top and bottom leds
         int bottom_led_index = 1;
         switch(${button_count}) {
           case 4: bottom_led_index = 14 - 2*button; break;
@@ -671,15 +673,6 @@ script:
           then:
             - lambda: |-
                 auto original_color = id(original_led_color)[0];
-              // TODO consider moving led_index logic into these dim methods
-              //especially for both top and bottom leds
-                //int bottom_led_index = 1;
-                //switch(${button_count}) {
-                  //4: bottom_led_index = 14 - 2*button; break;
-                  //3: bottom_led_index = 13 - 2*button; break;
-                  //2: bottom_led_index = 12 - 2*button; break;
-                //}
-                //
                 auto dim_color = (is_long_press) ? id(long_press_color) : id(touch_color);
                 float factor = iteration * 0.1f;
                 int r = dim_color[0]*(1.0-factor) + original_color.r*factor;
