--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -520,15 +520,7 @@ tx_ultimate_touch:
         ESP_LOGW("tx_ultimate_touch.on_press", "Touch Position: %d / State: %d", touch.x, touch.state);
         auto button = id(button_lookup)[${button_count}-1][touch.x-1];
         ESP_LOGI("button", "translated %d x to button %d", touch.x, button);
-        // TODO consider moving led_index logic into these dim_led_at methods
-        // especially for both top and bottom leds
-        int bottom_led_index = 1;
-        switch(${button_count}) {
-          case 4: bottom_led_index = 14 - 2*button; break;
-          case 3: bottom_led_index = 13 - 2*button; break;
-          case 2: bottom_led_index = 12 - 2*button; break;
-        }
-        id(led_on_button_press)->execute(bottom_led_index, button);
+        id(led_on_button_press)->execute(button);
     - switch.turn_on: vibra
 
   on_release:
@@ -649,6 +641,7 @@ script:
             }
             id(led_on_button_press_internal)->execute(button, led_index);
           }
+          esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
           target_led->schedule_show();
 # This script is stopped by on_release, so only if the button is held long enough 
 # will the long press color turn on.
@@ -656,8 +649,26 @@ script:
       - lambda: |-
           ESP_LOGI("button", "button %d possibly long pressed, not stopped", button);
           if (millis() - id(button_press_start_time)[button-1] > ${long_press_time}) {
-            esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-            target_led->get(led_index).set(esphome::Color(id(long_press_color)[0], id(long_press_color)[1], id(long_press_color)[2]));
+            esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output()); 
+            int led_index;
+            if (${button_led_feedback_bottom}) {
+              switch(${button_count}) {
+                case 4: led_index = 14 - 2*button; break;
+                case 3: led_index = 13 - 2*button; break;
+                case 2: led_index = 15 - 4*button; break;
+                case 1: led_index = 9; break;
+              }
+              target_led->get(led_index).set(esphome::Color(id(long_press_color)[0], id(long_press_color)[1], id(long_press_color)[2]));
+            }
+            if (${button_led_feedback_top}) {
+              switch(${button_count}) {
+                case 4: led_index = 18 + 2*button; break;
+                case 3: led_index = 19 + 2*button; break;
+                case 2: led_index = 17 + 4*button; break;
+                case 1: led_index = 23; break;
+              }
+              target_led->get(led_index).set(esphome::Color(id(long_press_color)[0], id(long_press_color)[1], id(long_press_color)[2]));
+            }
             target_led->schedule_show();
             id(vibra).turn_on();
           }
